--- a/popup.html
+++ b/popup.html
@@ -9,7 +9,7 @@
 <body>
   <div id="app">
     <header>
-      <h1>AutoML Lite</h1>
+      <h1>GlassBoxML</h1>
       <p>In-browser ML: classification, regression, clustering — with interpretable insights.</p>
     </header>
 
